--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Simone - Personal Portfolio React Template</title>
+    <title>Dev Yemsquare</title>
 
     <link
       rel="stylesheet"
@@ -42,7 +42,7 @@
     />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Dev Yemsquare - Personal Portfolio</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
